--- a/css/css.css
+++ b/css/css.css
@@ -22,9 +22,10 @@ body
 	display:inline-block;
 	width:20%;
 	padding:2%;
-	min-height:550px;
+	height:550px;
 	vertical-align:top;
 	border:#000 1px solid;
+	overflow: auto;
 }
 #left a
 {
@@ -42,10 +43,11 @@ body
 #right
 {
 	display:inline-block;
-	width:65%;
+	width:71%;
 	padding:2%;
-	min-height:550px;
+	height:550px;
 	border:#000 1px solid;
+	overflow: auto;
 }
 #bottom
 {
@@ -109,3 +111,86 @@ div.ww:hover > div.s
 {
 	font-size:12px;
 }
+
+.w-100{
+	width: 100%;
+}
+.w-90{
+	width: 90%;
+}
+.w-80{
+	width: 80%;
+}
+.w-70{
+	width: 70%;
+}
+.w-60{
+	width: 60%;
+}
+.w-50{
+	width: 50%;
+}
+.w-40{
+	width: 40%;
+}
+.w-30{
+	width: 30%;
+}
+.w-20{
+	width: 20%;
+}
+.w-10{
+	width: 10%;
+}
+.w-25{
+	width: 25%;
+}
+.w-33{
+	width: 33%;
+}
+
+.p-r {
+	position: relative;
+}
+
+.p-a {
+	position: absolute;
+}
+
+.d-f {
+	display: flex;
+}
+
+.a-c {
+	align-items: center;
+}
+
+.j-c {
+	justify-content: center;
+}
+
+.j-e {
+	justify-content: flex-end;
+}
+
+.j-b {
+	justify-content: space-between;
+}
+
+.p-10 {
+	padding: 10px;
+}
+
+.my-10 {
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+.m-1 {
+	margin: 1;
+}
+
+.aut {
+	margin: 0 auto;
+}
+
